Update and rename README.md to README

--- a/README
+++ b/README
@@ -2,7 +2,7 @@
 
 The final file to be run is in this directory called Integrator.java with the schema database_schema.sql
 
-You will need to download the whole package, and add Jsoup library as an external JAR in your project
+You will need to download the whole package, and add the libraries from the folder Lib as external JAR in your project
 You will also need to connect to a database. 
 Our queries correspond to ms-sql queries.
 There is an open source cross platform ms-sql database called operatin studio that can be easily installed for this project
